            NOTE: Please refer to the migration notes!
    * 0735 mem.win: now able to configure swap file levels
    * 0146 innovaphone_priports_l1, innovaphone_priports_l2: New Checks for Innovaphone PRI Ports
    * 0707 ibm_svc_host: New check: Status of hosts an IBM SVC / V7000 presents volumes to
    * 0598 kentix_temp, kentix_humidity: new checks for Kentix MultiSensor-Rack
    * 0768 New Special Agent for innovaphone gateways...
    * 0768 ibm_svc_license: New check for Licensing Status on IBM SVC / V7000 devices
    * 0769 ibm_svc_mdisk: new check for status and mode of MDisks in an IBM SVC / V7000 device
    * 0770 ibm_svc_mdiskgrp: New check for status and usage of MDisksGrps in IBM SVC / V7000 devices
    * 0771 ibm_svc_node: new check for status of IO Groups of IBM SVC / V7000 devices
    * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
    * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
    * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
    * 0305 FIX: apache_status: Fixed exception when agent reports HTML code as apache-status data...
    * 0104 FIX: mssql: Server instances with underline in name are now supported....
    * 0240 FIX: Virtualmachine names with space no longer have missing piggyback data...
    * 0310 FIX: apache_status: Improved handling of unexpeted data sent by agents...
    * 0088 FIX: esx_vsphere_datastores: fixed error with reported capacity of 0 bytes...
    * 0243 FIX: cisco_qos: no longer crashes when the qos policy name is not set...
    * 0326 FIX: hr_fs printer_supply: Improved translation of wrong encoded chars...
    * 0059 FIX: agent_vpshere: new option for supporting ESX 4.1...
    * 0334 FIX: cisco_fantray: Fixed error on Cisco devices which do not support this check...
    * 0355 FIX: heartbeat_crm: Now handling "Failed actions:" output in agent...
    * 0357 FIX: megaraid_bbu: Fixed expected state checking...