@@ -129,11 +129,11 @@
     * 0146 innovaphone_priports_l1, innovaphone_priports_l2: New Checks for Innovaphone PRI Ports
     * 0707 ibm_svc_host: New check: Status of hosts an IBM SVC / V7000 presents volumes to
     * 0598 kentix_temp, kentix_humidity: new checks for Kentix MultiSensor-Rack
-    * 0768 New Special Agent for innovaphone gateways...
     * 0768 ibm_svc_license: New check for Licensing Status on IBM SVC / V7000 devices
     * 0769 ibm_svc_mdisk: new check for status and mode of MDisks in an IBM SVC / V7000 device
     * 0770 ibm_svc_mdiskgrp: New check for status and usage of MDisksGrps in IBM SVC / V7000 devices
     * 0771 ibm_svc_node: new check for status of IO Groups of IBM SVC / V7000 devices
+    * 0778 New Special Agent for innovaphone gateways...
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
@@ -345,6 +345,7 @@
     * 0709 FIX: Fix NoneType has not attribute userdb_automatic_sync bug in D-WATO
     * 0728 FIX: mem.win: fixed bug in WATO configuration rule...
     * 0139 FIX: ldap sync: syncing if rules against ldap is not longer case sensitiv
+    * 0736 FIX: WATO backup and restore: improved error handling...
 
     Notifications:
     * 0362 sms: now searching PATH for sendsms and smssend commands...
